<resources>
    <string name="app_name">kmr player</string>
    <string name="songs_text">songs</string>
    <string name="albums_text">albums</string>
    <string name="artist_text">artists</string>
    <string name="playlist_text">Playlist</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="song_details_text">Song Details</string>
    <string name="ok_text">OK</string>
    <string name="song_location_text">Song location</string>
    <string name="duration_text">Duration</string>
    <string name="file_size_text">File size</string>
    <string name="bit_rate_text">Bitrate</string>
    <string name="sampling_rate_text">Sampling rate</string>
    <string name="set_text">Set</string>
    <string name="action_refresh">Refresh</string>
    <string name="jump_to_artist_text">Jump to artist</string>
    <string name="jump_to_album_text">Jump to album</string>
    <string name="song_title_text">Song Title</string>
    <string name="song_album_text">Album</string>
    <string name="song_artist_text">Artist</string>
    <string name="no_songs_text">You don\'t have any songs yet...</string>
    <string name="no_songs_logo">No Songs Logo</string>
    <string name="applyText">Apply</string>
    <string name="more_options_text">More Options</string>
    <string name="details_text">Details</string>
    <string name="share_text">Share</string>
    <string name="tag_editor_text">Tag editor</string>
    <string name="set_as_ringtone_text">Set as Ringtone</string>
    <string name="share_album_text">Share album</string>
    <string name="delete_album_text">Delete album</string>
    <string name="favorites_text">Favorites</string>
    <string name="favorite_image_text">Favorite image</string>
    <string name="custom_playlist_text">Custom playlist</string>
    <string name="most_played_text">Most played</string>
    <string name="history_text">History</string>
    <string name="recently_added_text">Recently added</string>
    <string name="made_with_love_text">beautifully handcrafted with love</string>
    <string name="no_play_history">You don\'t have any history</string>
    <string name="no_records_most_played">Keep listening to increase analysis..</string>
    <string name="enter_playlist_name_text">Enter playlist name</string>
    <string name="background_image_view_text">background image view text</string>
    <string name="album_art_image_view_text">album art image view</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="error_adding_song_to_playlist_text">error adding song to playlist</string>
    <string name="song_added_to_playlist_text">song added to playlist</string>
    <string name="songs_added_to_playlist_text">songs added to playlist</string>
    <string name="rename_text">Rename</string>
    <string name="enter_a_new_name_text">Enter a new name</string>
    <string name="search_text">Search</string>
    <string name="pause">pause_text</string>
    <string name="play">play_text</string>
    <string name="songs_library_text">Songs Library</string>
    <string name="others_text">Others</string>
    <string name="share_all_songs_text">Share all songs</string>
    <string name="song_year_text">Year</string>
    <string name="song_generic_text">Genre</string>
    <string name="action_equilzer">Equalizer</string>
    <string name="available_devices_text">Nearby devices</string>
    <string name="nearby_devices_text">Nearby devices</string>
    <string name="quick_share_text">Quick share</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="info_text">Info</string>
    <string name="nearby_info_text">Devices should be running under same network and KMR player should be active</string>
    <string name="waiting_for_approval">Waiting for apporoval</string>
    <string name="wait_in_background">wait in background</string>
    <string name="no_devices_available">No devices nearby</string>
    <string name="group_play_request">is requesting for group play ?</string>
    <string name="group_play_request_text">Group play request</string>
    <string name="group_play_rejected">rejected group play request</string>
    <string name="quick_share_rejected">rejected quick share request</string>
    <string name="initating_quick_share">Initiating transfer to</string>
    <string name="group_play_accepted">accpeted group play request</string>
    <string name="search_for_songs_albums_artist_text">Search for songs, albums, artist..</string>
    <string name="by_text">by</string>
    <string name="problem_fetching_current_playing_song">Problem fetching current playing song</string>
    <string name="now_playing_text">Now playing :</string>
    <string name="current_song_request_rejected">has rejected your request for transferring his current playing song</string>
    <string name="current_song_request_accepted">Receiving now playing song from</string>
    <string name="delete_artist_text">Delete artist</string>
    <string name="no_results_found_text">No results found</string>
    <string name="add_to_text">Add to</string>
    <string name="play_next">Play next</string>
    <string name="please_wait">please wait</string>
    <string name="lyrics_text">Lyrics</string>
    <string name="share_playlist_text">Share playlist</string>
    <string name="delete_playlist_text">Delete playlist</string>
    <string name="please_wait_while_we_populate_list_text">please wait, while we populate list</string>
    <string name="no_fav_songs_text">You don\'t have any favorite songs yet..</string>
    <string name="adding_songs_to_playlist">Adding songs to playlist</string>
    <string name="add_to_now_playing_queue">Add to now playing queue</string>
    <string name="Connect_to_a_network_text">Connect to a network</string>
    <string name="WIFI_text">wifi</string>
    <string name="hotspot_text">Hotspot</string>
    <string name="_0_00">0:00</string>
    <string name="problem_deleting_song">Problem deleting song</string>
    <string name="app_description_text">A new way of listening music, beautifully handcrafted with love (Missing credits/license will be added soon)</string>
    <string name="permissions_title_text">We just need some permissios to get started</string>
    <string name="permissions_description_text">We need permission to read and write songs data from your device.</string>
    <string name="all_set_text">You\'re all set! Happy listening</string>
    <string name="get_started_text">Get started..</string>
    <string name="alpha_version_title_text">Smart cast is still in alpha version</string>
    <string name="alpha_version_description_text">There might be still some bugs around there, we are striving hard to fix them.</string>
    <string name="cluster_title_text">Share songs and engage with friends with built in social networking</string>
    <string name="cluster_description_text">Seek nearby friends using nearby feature, and engage your music madness with your squad spontaneously</string>
    <string name="About_text">About</string>
    <string name="about_text">About</string>
    <string name="Quick_shuffle_widget_text">Quick shuffle!!</string>
    <string name="Favorites_widget_text">Playing Favorites!!</string>
    <string name="Most_played_widget_text">Playing Most played songs!!</string>
    <string name="please_wait_quick_shuffle">please wait while we populate quick shuffle list</string>
    <string name="widget_no_songs_text">You don\'t have songs on your device</string>
    <string name="settings_text">Settings</string>
    <string name="Show_Floating_notification">Show floating notifications</string>
    <string name="shows_a_floating_information_on_screen_when_song_changes">Floating information on screen when song changes</string>
    <string name="no_songs_in_this_playlist_text">No songs in this playlist</string>
    <string name="remove_song_text">Remove song</string>
    <string name="please_wait_finalising_tag_edit">Please wait, finalizing tag edit</string>
    <string name="remove_from_playlist_text">Remove from playlist</string>
    <string name="error_removing_song_from_playlist_text">Error removing song from playlist</string>
    <string name="song_removed_from_playlist_text">Song removed from playlist</string>
    <string name="general_settings">General</string>
    <string name="Blur_album_art">Blur album art</string>
    <string name="Blurs_the_album_art_on_the_lockscreen_text">Blurs the album art on the lockscreen text</string>
    <string name="Show_album_art">Show album art</string>
    <string name="Shows_current_song_album_art_as_lock_screen_wallpaper">Shows current song album art as lock screen wallpaper</string>
    <string name="Lockscreen_preferences">Lockscreen preferences</string>
    <string name="Display_Name">Display name</string>
    <string name="This_name_will_be_visible_to_your_friends">This name will be visible to yout friends</string>
    <string name="Theme">Theme</string>
    <string name="Colored_Navigation_bar">Colored Navigation bar</string>
    <string name="Adds_color_to_soft_navigation_bar">Adds color to soft navigation bar</string>
    <string name="no_available_on_your_device">(Not available on your device)</string>
    <string name="contact_developer_uri">mailto:leonius.developers@gmail.com</string>
    <string name="Audio_preferences">Audio preferences</string>
    <string name="Equalizer">Equalizer</string>
    <string name="Show_player_equalizer">Show player equalizer</string>
    <string name="Rate_our_app_text">Rate our app</string>
    <string name="rate_our_app_summary">Take a moment to rate and review kmr player, Your review can make our day!!!</string>
    <string name="Contact_developer">Contact developer</string>
    <string name="Contact_developer_desc">Suggestion? Bug? Mail Developer!! We read all your mails.</string>
    <string name="Enter_name_desc">This name will be visible to your friends. Use a recognizable name</string>
    <string name="name_text">your name...</string>
    <string name="empty" />
    <string name="please_wait_while_we_populate_full_songs_list_text">Relax while we populate songs list (May take more time for the first launch)</string>
    <string name="no_albums_text">You don\'t have any albums yet...</string>
    <string name="no_artist_text">You don\'t have any artist yet...</string>
    <string name="Report_bug">Report bug</string>
    <string name="report_bug_desc">Report bug or request a feature (We read all your request)</string>
    <string name="report_bug_text">Report bug</string>
    <string name="suggestion_text">Suggestion</string>
    <string name="describe_bug">Describe bug (Provide email for reply)</string>
    <string name="describe_your_suggestion">Describe suggestion (Provide email for reply)</string>
    <string name="Sticky_Notification">Sticky Notification</string>
    <string name="Sticky_Notification_desc">Swiping notification won\'t be dismissed</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="events_text">Requests</string>
    <string name="events_info_text">All transfer requests are requested here</string>
    <string name="delete_event_text">Delete request</string>
    <string name="options_text">Options</string>
    <string name="Send_songs_without_confirmation_text">Accept songs transfer request without confirmation</string>
    <string name="Transfer_without_confirmation">Share without confirmation</string>
    <string name="problem_fetching_song">Problem fetching song</string>
    <string name="songs_received">Received songs</string>
    <string name="received_songs">Received songs</string>
    <string name="Request_group_listen_text">Request group listen</string>
    <string name="connected_devices_text">Connected devices</string>
</resources>