<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/song_context_menu_quick_share"
        android:title="@string/quick_share_text" />

    <item
        android:id="@+id/song_context_menu_share"
        android:title="@string/share_text" />

    <item
        android:id="@+id/song_context_menu_add_to_playlist"
        android:title="@string/add_to_playlist"/>

    <item
        android:id="@+id/song_context_menu_jump_to_album"
        android:title="@string/jump_to_album_text" />

    <item
        android:id="@+id/song_context_menu_jump_to_artist"
        android:title="@string/jump_to_artist_text" />

    <item
        android:id="@+id/song_context_menu_tagEditor"
        android:title="@string/tag_editor_text" />

    <item
        android:id="@+id/song_context_menu_ringtone"
        android:title="@string/set_as_rigntone_text" />

    <item
        android:id="@+id/song_context_menu_details"
        android:title="@string/details_text" />

    <item
        android:id="@+id/song_context_menu_delete"
        android:title="@string/delete_text" />
</menu>