<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_white_24dp"
        android:title="@string/search_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_devices_button"
        android:icon="@mipmap/ic_devices_white_24dp"
        android:title="@string/nearby_devices_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_requests"
        android:title="@string/events_text" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_text" />

    <item
        android:id="@+id/action_equilzer"
        android:title="@string/action_equilzer" />

</menu>
