<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/search_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_devices_button"
        android:icon="@mipmap/ic_devices_white_24dp"
        android:orderInCategory="100"
        android:title="@string/nearby_devices_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_quick_share"
        android:title="@string/quick_share_text" />

    <item
        android:id="@+id/action_share_playlist"
        android:title="@string/share_playlist_text" />

    <item
        android:id="@+id/action_delete_playlist"
        android:title="@string/delete_playlist_text" />

    <item
        android:id="@+id/action_equilzer"
        android:title="@string/action_equilzer" />

</menu>