<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_devices_button"
        android:icon="@mipmap/ic_devices_white_24dp"
        android:orderInCategory="100"
        android:title="@string/nearby_devices_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_quick_share"
        android:title="@string/quick_share_text" />

    <item
        android:id="@+id/action_share_all_songs_from_artist"
        android:title="@string/share_all_songs_text" />

    <item
        android:id="@+id/action_delete_artist"
        android:title="@string/delete_artist_text" />

    <item
        android:id="@+id/action_equilzer"
        android:title="@string/action_equilzer" />

</menu>