<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/album_context_menu_share_album"
        android:title="@string/share_album_text" />

    <item
        android:id="@+id/album_context_menu_shout"
        android:title="@string/Shout_text"/>

    <item
        android:id="@+id/album_context_menu_jump_to_artist"
        android:title="@string/jump_to_artist_text" />

    <item
        android:id="@+id/album_context_menu_tagEditor"
        android:title="@string/tag_editor_text" />

    <item
        android:id="@+id/album_context_menu_delete_album"
        android:title="@string/delete_album_text" />

    <item
        android:id="@+id/action_equilzer"
        android:title="@string/action_equilzer"
        app:showAsAction="never" />

</menu>