<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/root_layout_album_recyler_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="2dp"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/album_art_albumrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:transitionName="AlbumArtImageTranscition"
            fresco:placeholderImage="@mipmap/ic_launcher"/>

        <RelativeLayout
            android:id="@+id/color_box_layout_albumrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="75">

            <LinearLayout
                android:id="@+id/album_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Album_name_albumrecyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:text="@string/albums_text"/>

                <TextView
                    android:id="@+id/Artist_name_albumrecyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:text="@string/artist_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignEnd="@id/album_info"
                android:padding="5dp">

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:mfb_type="heart"
                    app:mfb_animate_favorite="true"
                    app:mfb_color="white"/>

                <ImageView
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_dots_vertical_white_24dp"
                    android:contentDescription="@string/more_options_text" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
