<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/notification_album_art"
        android:padding="5dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/unkown_album_art"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_toEndOf="@+id/notification_album_art"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/notification_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textStyle="bold"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:text="@string/songs_text"/>

            <TextView
                android:id="@+id/notification_album_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#696969"
                android:text="@string/albums_text"/>

            <TextView
                android:id="@+id/notification_artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#696969"
                android:text="@string/artist_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/notification_favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dp"
                android:layout_weight="0.25"
                android:src="@mipmap/ic_favorite_border_black_24dp"/>

            <ImageView
                android:id="@+id/notification_prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dp"
                android:layout_weight="0.25"
                android:src="@mipmap/ic_chevron_left_black_24dp"/>

            <ImageView
                android:id="@+id/notification_play_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dp"
                android:layout_weight="0.25"
                android:src="@mipmap/ic_play_arrow_black_24dp"/>

            <ImageView
                android:id="@+id/notification_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dp"
                android:layout_weight="0.25"
                android:src="@mipmap/ic_chevron_right_black_24dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>